# backend/FlametteMoney.Web/Features/Transactions/GetTransactionEndpoint.cs
@@ -24,6 +24,9 @@ public record GetTransactionResponse(
     DateTime Date,
     TransactionType Type,
     decimal Amount,
+    decimal? Amount2,
+    string? Currency,
+    string? Currency2,
     Guid AccountId,
     Guid? TripId,
     Guid? CategoryId,
@@ -76,6 +79,9 @@ public sealed class GetTransactionEndpoint : ICarterModule
             transaction.Date,
             transaction.Type,
             transaction.Amount,
+            transaction.Amount2,
+            transaction.Currency,
+            transaction.Currency2,
             transaction.AccountId,
             transaction.TripId,
             transaction.CategoryId,
