# backend/FlametteMoney.Web/Features/Transactions/ListTransactionsEndpoint.cs
@@ -13,6 +13,9 @@ public record TransactionListItemResponse(
     DateTime Date,
     TransactionType Type,
     decimal Amount,
+    decimal? Amount2,
+    string? Currency,
+    string? Currency2,
     Guid AccountId,
     Guid? TripId,
     Guid? CategoryId,
@@ -58,6 +61,9 @@ public sealed class ListTransactionsEndpoint : ICarterModule
                 transaction.Date,
                 transaction.Type,
                 transaction.Amount,
+                transaction.Amount2,
+                transaction.Currency,
+                transaction.Currency2,
                 transaction.AccountId,
                 transaction.TripId,
                 transaction.CategoryId,
