# backend/FlametteMoney.Web/Features/Transactions/SearchTransactionsEndpoint.cs
@@ -109,6 +109,9 @@ public sealed class SearchTransactionsEndpoint : ICarterModule
                 transaction.Date,
                 transaction.Type,
                 transaction.Amount,
+                transaction.Amount2,
+                transaction.Currency,
+                transaction.Currency2,
                 transaction.AccountId,
                 transaction.TripId,
                 transaction.CategoryId,
